Unhork binhex decoder by undoing the ifdef-reversal.  Bug 220611, r=biesi, sr=darin